<resources>
    <string name="app_name">Airport Enhanced</string>
    <string name="shared_preferences_name_key">airport_shared_preferences_key</string>
    <string name="credentials_token_key">credentials_token_key_string_access</string>
    <string name="incoming_flights">Incoming flights</string>
    <string name="departing_flights">Departing flights</string>
    <string name="account_tab">Your account</string>
    <string name="weather">Weather</string>
    <string name="loading">Loading</string>
    <string name="cannot_get_flights">Cannot get more flights</string>
    <string name="cannot_get_single_flight">Cannot get this flight</string>
    <string name="cannot_edit_flights">Cannot edit flights</string>
    <string name="cannot_view_this_list">Cannot view this list</string>
    <string name="cannot_save_flight">Cannot save flight</string>
    <string name="load_more">Load more</string>
    <string name="create_new">Create new</string>
    <string name="create_new_flight">Create new flight</string>
    <string name="edit_flight">Edit flight</string>
    <string name="delete">Delete</string>
    <string name="cannot_perform_action">Cannot perform action</string>
    <string name="success">Success</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password cannot be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="insufficient_rights">Insufficient rights</string>
    <string name="save">Save</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_users_list">All users list</string>
    <string name="all_users">All users</string>
    <string name="flight_details">Flight details</string>
    <string name="flight_details_shared">Flight details (shared via link)</string>
    <string name="plane_model">Plane</string>
    <string name="flight_number">Flight #</string>
    <string name="departing_time">Departing</string>
    <string name="arriving_time">Arriving</string>
    <string name="incoming_type">Incoming flight</string>
    <string name="departing_type">Departing flight</string>
    <string name="gate">Gate</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">"You've been sign out"</string>
    <string name="current_session">Current session</string>
    <string name="user_short">User</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="can_edit_short">Can edit</string>
    <string name="level_desc">User level</string>
    <string name="regular_level">Regular user</string>
    <string name="moder_level">Moderation</string>
    <string name="admin_level">Administration</string>
    <string name="removed_flight_number">"Removed flight #"</string>
    <string name="target_airport_name">Target airport name</string>
    <string name="is_incoming_checkbox">Is incoming</string>
    <string name="target_airport_iata">Target airport IATA</string>
    <string name="target_airport_iata_short">IATA code</string>
    <string name="local_db">Local DB</string>
    <string name="no_flights_in_list">No flights yet</string>
    <string name="oauth2">OAuth2</string>
</resources>