<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.FlightsListFragment">

    <TextView
            android:id="@+id/section_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            tools:layout_constraintLeft_creator="1"
            android:text="@string/loading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="12dp"
            android:paddingBottom="72dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout">


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/create_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fab_margin"
                android:textColor="@color/black"
                android:text="@string/create_new"
                app:icon="@drawable/ic_baseline_add_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/load_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fab_margin"
                android:textColor="@color/black"
                android:text="@string/load_more"
                app:icon="@drawable/ic_baseline_search_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>