<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.FlightDetailsFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:title="@string/flight_details"
            android:layout_height="?attr/actionBarSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/constraintLayout"
            android:layout_marginTop="?actionBarSize"
            android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="12dp"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                android:paddingBottom="8dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:id="@+id/control_buttons"
                android:clipToPadding="false"
                android:paddingVertical="16dp"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerview">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/edit_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:textColor="@color/black"
                    android:text="@string/edit_flight"
                    app:icon="@drawable/ic_baseline_edit_24" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/delete_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:textColor="@color/black"
                    android:text="@string/delete"
                    app:icon="@drawable/ic_baseline_delete_24" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>